--- a/LastSpotify.ipynb
+++ b/LastSpotify.ipynb
@@ -402,70 +402,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting torch\n",
-      "  Downloading torch-1.13.0-cp39-cp39-win_amd64.whl (167.2 MB)\n",
-      "     ------------------------------------ 167.2/167.2 MB 530.7 kB/s eta 0:00:00\n",
-      "Collecting typing-extensions\n",
-      "  Downloading typing_extensions-4.4.0-py3-none-any.whl (26 kB)\n",
-      "Installing collected packages: typing-extensions, torch\n",
-      "Successfully installed torch-1.13.0 typing-extensions-4.4.0\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  WARNING: The scripts convert-caffe2-to-onnx.exe, convert-onnx-to-caffe2.exe and torchrun.exe are installed in 'c:\\Users\\Hira Cansu\\AppData\\Local\\Programs\\Python\\Python39\\Scripts' which is not on PATH.\n",
-      "  Consider adding this directory to PATH or, if you prefer to suppress this warning, use --no-warn-script-location.\n"
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 34247 entries, 0 to 34246\n",
+      "Data columns (total 17 columns):\n",
+      " #   Column            Non-Null Count  Dtype  \n",
+      "---  ------            --------------  -----  \n",
+      " 0   artist_name       34247 non-null  float64\n",
+      " 1   danceability      34247 non-null  float64\n",
+      " 2   energy            34247 non-null  float64\n",
+      " 3   key               34247 non-null  float64\n",
+      " 4   loudness          34247 non-null  float64\n",
+      " 5   mode              34247 non-null  int64  \n",
+      " 6   speechiness       34247 non-null  float64\n",
+      " 7   acousticness      34247 non-null  float64\n",
+      " 8   instrumentalness  34247 non-null  float64\n",
+      " 9   liveness          34247 non-null  float64\n",
+      " 10  valence           34247 non-null  float64\n",
+      " 11  tempo             34247 non-null  float64\n",
+      " 12  artist_pop        34247 non-null  float64\n",
+      " 13  genres            34247 non-null  object \n",
+      " 14  track_pop         34247 non-null  float64\n",
+      " 15  subjectivity      34247 non-null  float64\n",
+      " 16  polarity          34247 non-null  float64\n",
+      "dtypes: float64(15), int64(1), object(1)\n",
+      "memory usage: 4.4+ MB\n"
      ]
     }
    ],
    "source": [
     "df.info()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting scikit-learn\n",
-      "  Downloading scikit_learn-1.2.0-cp39-cp39-win_amd64.whl (8.3 MB)\n",
-      "     ---------------------------------------- 8.3/8.3 MB 173.8 kB/s eta 0:00:00\n",
-      "Collecting threadpoolctl>=2.0.0\n",
-      "  Downloading threadpoolctl-3.1.0-py3-none-any.whl (14 kB)\n",
-      "Collecting joblib>=1.1.1\n",
-      "  Downloading joblib-1.2.0-py3-none-any.whl (297 kB)\n",
-      "     ------------------------------------ 298.0/298.0 kB 328.8 kB/s eta 0:00:00\n",
-      "Requirement already satisfied: numpy>=1.17.3 in c:\\users\\hira cansu\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from scikit-learn) (1.23.5)\n",
-      "Collecting scipy>=1.3.2\n",
-      "  Downloading scipy-1.9.3-cp39-cp39-win_amd64.whl (40.2 MB)\n",
-      "     ---------------------------------------- 40.2/40.2 MB 2.0 MB/s eta 0:00:00\n",
-      "Installing collected packages: threadpoolctl, scipy, joblib, scikit-learn\n",
-      "Successfully installed joblib-1.2.0 scikit-learn-1.2.0 scipy-1.9.3 threadpoolctl-3.1.0\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
-   "source": [
-    "pip install -U scikit-learn\n"
    ]
   }
  ],
