--- a/LastSpotify.ipynb
+++ b/LastSpotify.ipynb
@@ -975,10 +975,6 @@
     "        self.bn2 = nn.BatchNorm1d(64)\n",
     "        self.drop2 = nn.Dropout(p=0.1)\n",
     "\n",
-    "        # self.fc3 = nn.Linear(64, 32)\n",
-    "        # self.bn3 = nn.BatchNorm1d(32)\n",
-    "        # self.drop3 = nn.Dropout(p=0.1)\n",
-    "\n",
     "        self.leakyrelU = nn.LeakyReLU()\n",
     "        self.out = nn.Linear(64, len(genre_to_class))\n",
     "        self.sigmoid = nn.Sigmoid()\n",
@@ -996,10 +992,6 @@
     "        x = self.leakyrelU(x)\n",
     "        x = self.drop2(x)\n",
     "\n",
-    "        # x = self.fc3(x)\n",
-    "        # x = self.bn3(x)\n",
-    "        # x = self.leakyrelU(x)\n",
-    "        # x = self.drop3(x)\n",
     "\n",
     "        x = self.out(x)\n",
     "        x = self.sigmoid(x)\n",
@@ -1049,7 +1041,48 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# epoch_number = 1000\n",
+    "# val_loss_best = np.Inf\n",
+    "# early_stopping_number = 10\n",
+    "# early_stopping_count = 0\n",
+    "#\n",
+    "# for epoch_count in range(epoch_number):\n",
+    "#     train_loss = 0.0\n",
+    "#     val_loss = 0.0\n",
+    "#\n",
+    "#     model.train()\n",
+    "#     for i, (data, target) in enumerate(train_loader):\n",
+    "#         optimizer.zero_grad()\n",
+    "#         output = model(data.float())\n",
+    "#         loss = criterion(output, target.float())\n",
+    "#         loss.backward()\n",
+    "#         optimizer.step()\n",
+    "#         train_loss += loss.item()*data.size(0)\n",
+    "#     train_loss = train_loss / len(train_loader.dataset)\n",
+    "#     scheduler.step()\n",
+    "#\n",
+    "#     model.eval()\n",
+    "#     for i, (data, target) in enumerate(val_loader):\n",
+    "#         output = model(data.float())\n",
+    "#         loss = criterion(output, target.float())\n",
+    "#         val_loss += loss.item()*data.size(0)\n",
+    "#     val_loss = val_loss / len(val_loader.dataset)\n",
+    "#\n",
+    "#     print('Epoch: {} Train_Loss: {:.5f} Val_Loss: {:.5f}'.format(epoch_count+1, train_loss, val_loss))\n",
+    "#\n",
+    "#     if val_loss <= val_loss_best:\n",
+    "#         print('Current best val loss is {:.5f}'.format(val_loss))\n",
+    "#         torch.save(model.state_dict(), model_name)\n",
+    "#         val_loss_best = val_loss\n",
+    "#         early_stopping_count = 0\n",
+    "#     elif epoch_count < 10:\n",
+    "#         pass\n",
+    "#     elif early_stopping_count < early_stopping_number:\n",
+    "#         early_stopping_count += 1\n",
+    "#     else:\n",
+    "#         break"
+   ]
   },
   {
    "cell_type": "code",
